Can now increase , decrease and remove items

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/style.css" />
 
     <script src="../js/cart.js" type="module"></script>
+    
   </head>
 
   <body>
@@ -65,6 +66,7 @@
                 src="images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
                 alt="Marmot Ajax tent"
               />
+               <h3 id="cart-total">Total: $0.00</h3>
             </a>
             <a href="product_pages/marmot-ajax-3.html">
               <h2 class="card__name">Marmot Ajax Tent - 3-Person, 3-Season</h2>
@@ -90,6 +92,11 @@
             <p class="cart-card__price">$199.99</p>
           </li> -->
         </ul>
+        <div class="cart">
+      <a href="cart/index.html">
+     <span class="cart-total">$0.00</span>
+      </a>
+        </div>
       </section>
     </main>
 
